K8s/back-services.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      tolerations:
      - key: "instance_type"
        operator: "Equal"
        value: "app"
        effect: "NoSchedule"
      containers:
        - name: backend
          image: josuegaticaodato/backend-bypass
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-services
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: backend
  type: ClusterIP
