K8s/front-services.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-vite
  labels:
    app: frontend-vite
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-vite
  template:
    metadata:
      labels:
        app: frontend-vite
    spec:
      tolerations:
      - key: "instance_type"
        operator: "Equal"
        value: "app"
        effect: "NoSchedule"

      containers:
        - name: frontend-vite
          image: josuegaticaodato/frontend-vite
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-vite-service
spec:
  selector:
    app: frontend-vite
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
