K8s/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # Conecta con el archivo del paso 1
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - unlucoin.info
        # - www.unlucoin.info  <-- Descomenta si también configuras www en DNS
      secretName: frontend-tls # Aquí se guardará el certificado
  rules:
    - host: unlucoin.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-vite-service
                port:
                  number: 80
